# rubik

./: Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: build.yml  release.yml
src/: lib.rs  main.rs
src/cube/: cubie.rs  mod.rs  moves.rs  scrambler.rs  state.rs
src/render/: animation.rs  cube3d.rs  mod.rs
src/solver/: idas.rs  kociemba_solver.rs  mod.rs  stats.rs
src/ui/: hud.rs  mod.rs
tests/: cube_integration.rs
